[BUGFIX] Correct column gap count for 3 column layout
Resolves: #1239

--- a/Resources/Public/Scss/components/_backendlayout.scss
+++ b/Resources/Public/Scss/components/_backendlayout.scss
@@ -66,12 +66,12 @@
     .backendlayout-3_columns {
         .maincontent-wrap {
             order: 2;
-            --section-gaps: 1;
+            --section-gaps: 2;
             --section-colspan: 6;
         }
         .subcontent-wrap {
             order: 3;
-            --section-gaps: 1;
+            --section-gaps: 2;
             --section-colspan: 3;
         }
         .maincontent-wrap + .subcontent-wrap {
